[gd_scene load_steps=16 format=3 uid="uid://iou0tjr5a320"]

[ext_resource type="Script" path="res://scripts/game_manager.gd" id="1_1d4vy"]
[ext_resource type="Texture2D" uid="uid://dl6b6ewaxaxom" path="res://assets/forest_background.png" id="2_f6o4n"]
[ext_resource type="PackedScene" uid="uid://cmccd8rxiyqab" path="res://scenes/characters/neuro_sama.tscn" id="3_06r6c"]
[ext_resource type="PackedScene" uid="uid://c0cerfjhi148m" path="res://scenes/entity_manager.tscn" id="3_lc17n"]
[ext_resource type="PackedScene" uid="uid://du1rkche8wapa" path="res://scenes/characters/enemies/drone.tscn" id="4_sa8pl"]
[ext_resource type="Texture2D" uid="uid://duwanoipd03rk" path="res://assets/ui/selection_circle.png" id="5_5evu7"]
[ext_resource type="PackedScene" uid="uid://d4f0gy2sw12hv" path="res://scenes/ui/end_screen.tscn" id="6_5e04m"]
[ext_resource type="AudioStream" uid="uid://cdbbs3cm1pli5" path="res://addons/Pixel_boy/theme-7.ogg" id="7_dh72o"]
[ext_resource type="AudioStream" uid="uid://bcvyh3sruf5vp" path="res://addons/Pixel_boy/theme-3b.ogg" id="8_6nrhj"]
[ext_resource type="AudioStream" uid="uid://c2qho0xysuk3u" path="res://addons/sfx/Retro Negative Long 12.wav" id="9_5rh68"]
[ext_resource type="Texture2D" uid="uid://bqcfv1jmifejt" path="res://assets/sad_ved.png" id="10_e6pgn"]

[sub_resource type="Animation" id="Animation_3mlxk"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TurnLabel:text")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["Your turn"]
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("TurnLabel:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(5, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("TurnLabel:modulate:a")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("EndScreen:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(448, 14)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("EndScreen:scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("EndScreen:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_yj4cw"]
resource_name = "show_end_screen"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("EndScreen:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.0333333, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(600, 43), Vector2(600, 130)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("EndScreen:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.0333333, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("EndScreen:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_puse5"]
resource_name = "start_player_turn"
length = 2.0
step = 0.0538
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TurnLabel:text")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.517541),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["Your turn"]
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("TurnLabel:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0, 0, 0),
"points": PackedFloat32Array(5, -0.25, 0, 0.25, 0, 80, -0.25, 0, 0.25, 0, 80, -0.25, 0, 0.25, 0, 160, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0.517541, 0.950874, 1.21754, 1.68421)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("TurnLabel:modulate:a")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0, 0, 0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0.517541, 0.950874, 1.21754, 1.68421)
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_xsa6o"]
_data = {
"RESET": SubResource("Animation_3mlxk"),
"show_end_screen": SubResource("Animation_yj4cw"),
"start_player_turn": SubResource("Animation_puse5")
}

[node name="Game" type="Node2D"]
script = ExtResource("1_1d4vy")

[node name="Background" type="Sprite2D" parent="."]
position = Vector2(576, 294)
texture = ExtResource("2_f6o4n")

[node name="Entity_manager" parent="." instance=ExtResource("3_lc17n")]

[node name="NeuroSama" parent="Entity_manager" instance=ExtResource("3_06r6c")]
position = Vector2(-76, 460)

[node name="Drone" parent="Entity_manager" instance=ExtResource("4_sa8pl")]
position = Vector2(1250, 488)
entity_name = "Basic Drone 1"

[node name="Drone2" parent="Entity_manager" instance=ExtResource("4_sa8pl")]
position = Vector2(1345, 371)
entity_name = "Basic Drone 2"

[node name="SelectionCircle" type="Sprite2D" parent="."]
position = Vector2(584, 427)
texture = ExtResource("5_5evu7")

[node name="InstructionLabel" type="Label" parent="."]
offset_right = 40.0
offset_bottom = 23.0

[node name="EndTurnButton" type="Button" parent="."]
offset_left = 491.0
offset_top = 575.0
offset_right = 567.0
offset_bottom = 606.0
text = "end turn"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_xsa6o")
}

[node name="TurnLabel" type="Label" parent="."]
modulate = Color(1, 1, 1, 0)
offset_left = 543.0
offset_top = 5.0
offset_right = 617.0
offset_bottom = 28.0
text = "Your turn"

[node name="EndScreen" parent="." instance=ExtResource("6_5e04m")]
offset_left = 448.0
offset_top = 14.0
offset_right = 488.0
offset_bottom = 54.0

[node name="Return" type="Button" parent="."]
offset_left = 19.0
offset_top = 610.0
offset_right = 139.0
offset_bottom = 641.0
text = "Return to map
"

[node name="music" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_dh72o")
volume_db = -30.0
autoplay = true
bus = &"Music"
parameters/looping = true

[node name="win_sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_6nrhj")
volume_db = -20.0
bus = &"Music"
parameters/looping = true

[node name="lose_sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_5rh68")
volume_db = -10.0

[node name="TextureRect" type="TextureRect" parent="."]
modulate = Color(0.827451, 0.843137, 0.737255, 1)
offset_left = 902.0
offset_top = 437.0
offset_right = 1122.0
offset_bottom = 637.0
scale = Vector2(0.674929, 0.706331)
texture = ExtResource("10_e6pgn")
flip_h = true
